1.3.1 final
===========
(Robert Tansley)
- Fixed bug 1252153 - Error on fresh install


1.3 final
=========
(Scott Yeadon)
- Updated Xerces, Xalan and oaicat jar files

(Richard Jones)
- New configuration option, webui.licence_bundle.show -- configures display
of deposit license in item display page

(Scott Yeadon)
 - SF Bug #1247508  Error when browsing item with no content/bitstream
 
(Nathan Sarr)
- One invalid email address no longer aborts whole subscription email process.
Error is logged and emailing continues.  SF patch #1246158; fixes SF bug
#1245223

(Robert Tansley)
- Rearranged format level display tags.  Bizarrely, this fixes
#1238277 (unsure why!!)
- Double quotes in metadata values are changed to HTML entities
before adding to form.  Fixes bug SF #1238276.
- Minor HTMLfixes to ws-main.jsp
- Error reported when uploading zero-length files.  This is the only apparent
way to tell when an invalid filename has been specified in the upload form.
Fixes bug SF #1242548

(Claudia Jürgen)
- SF Patch #1226874 "null" in Introductory text of communities and collection

(Jozsef Marton)
- SF Patch #1233437 fix broken item-mapper & fine tune i18n

(Claudia Jürgen)
- SF Patch #1226958 XHTML compliance of Messages_en.properties

1.3 beta 1
==========

(Larry Stone)
- SF Patch #1216889 typo in invalid-id.jsp

(Jozsef Marton)
- SF Patch #1214539 i18n'ise the custom JSP tags
- SF Patch #1196103 Set the content type in the HTTP header
- SF Patch #1196095 closes SF Bug #1188016 - EPerson editing issue

(Richard Rodgers)
- SF Patch #1189665 Custom Submission Patch for handling null qualifier and page flow metadata issue

(Naveed Hashmi)
- SF Patch #1181335 Fixed bug whereby system emails do not have sent dates attached to them


1.3 alpha
=========
(Dimitrios A. Koutsomitropoulos, Jozsef MARTON, Robert Tansley)
- Initial i18n support

(John Finlay)
SF Patch #1110951 - LDAP Authentication Patch

(Larry Stone)
SF Patch #1175158 - Add POST handler to HTMLServlet
