@@ -1,3 +1,10 @@
+(Robert Tansley)
+- Bug fix: Item exporter now correctly exports metadata in UTF-8
+- Bug fix: Item.addDC() fixed to handle 'null' values passed in (previously threw
+NullPointerException).  Note: the null value is added as a DC field.  Another
+possibility would be to ignore/remove the null value -- would this be better,
+or are null values OK?
+
 1.3.1 final
 ===========
 (Robert Tansley)
